--- a/style.css
+++ b/style.css
@@ -130,6 +130,44 @@ ul {
     box-shadow: 2px 4px 4px gray;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+}
+
+section p {
+    margin-block: 8px;
+}
+
+/* section div {
+    margin-block: 8px;
+} */
+
+section .cta {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-block: 32px;
+    height: fit-content;
+}
+
+.btn-primary {
+    /* margin-block: 8px; */
+    /* border: 1px solid gray; */
+    text-decoration: none;
+    padding-block: 1rem;
+    padding-inline: 2rem;
+    border-radius: 4px;
+    width: fit-content;
+    background-color: rgb(75, 75, 75);
+    color: white;
+    box-sizing: border-box;
+}
+
+.btn-primary:hover {
+    background: rgb(99, 99, 99);
+}
+
 
 
 /* ul.skills > ul {
