move subtitle to heading element for SEO

--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ ul.links li {
     border-radius: 8px;
 }
 
+p[role="doc-subtitle"] {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
 ul.links a {
     display: block;
     width: 100%;
